---------------------------------------------------------------------------------------------------
Version: 2.0.3
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: 2024-12-05
  Changes:
    - Added space age as an optional dependency
---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 2024-12-05
  Changes:
    - Migrated to 2.0!
---------------------------------------------------------------------------------------------------
Version: 0.9.4
Date: ????
  Architecture:
    - Organized the vanilla reskinning
    - Simplified and reorganized the sprite retinting
---------------------------------------------------------------------------------------------------
Version: 0.9.3
Date: 2024-06-24
  Major Features:
    - Added support for vanilla-loaders-hd
---------------------------------------------------------------------------------------------------
Version: 0.9.2
Date: 2024-01-16
  Bugfixes:
    - Fixed bug where trying to load the game without Loader Redux would cause an error
---------------------------------------------------------------------------------------------------
Version: 0.9.1
Date: 2024-01-16
  Bugfixes:
    - Made the info.json version actually match the intended version. Whoops
---------------------------------------------------------------------------------------------------
Version: 0.9.0
Date: 2024-01-16
  Features:
    - Added option to reorder item groups
    - Regroups belts/splitters/undergrounds
    - Regroups Miniloaders
    - Regroups Deadlock loaders/beltboxes
    - Regroups AAI loaders
    - Regroups Loader Redux loaders
  Locale:
    - Added description for new setting
---------------------------------------------------------------------------------------------------
Version: 0.8.1
Date: 2024-01-14
  Features:
    - Splitter and Underground items are now recolored